@@ -5,6 +5,9 @@ ICSCollector.js - collector controller for these devices (mechanisms):
 * Mercury 234 - Mercury234parser.js
 * Mercury 206 - Mercury206parser.js
 
-Scripts for these devices:
+Collecting scripts for these devices:
 * Lora - ICSLoraMonitor.js
-* MeteoStation МПВ-702.1643 (merapribor.ru in Russian) -ICSMercuryMonitor.js
+* MeteoStation МПВ-702.1643 (merapribor.ru in Russian) - ICSMeteoMonitor.js
+* MeteoStation Sokol-M (https://www.fmeter.ru/produktsiya/meteo-kontrol/meteostanciya-sokol-m/) - ICSMeteoMonitorSokol.js
+* ICSWirenBoard.js - https://wirenboard.com/ru/
+* singlecommand.js - send some commands to Mercury234
